--- a/CodificaAtividade04New/pages/faq.html
+++ b/CodificaAtividade04New/pages/faq.html
@@ -1,6 +1,6 @@
 <section class="bg-light faqSection">
   <div class="sticky-top bg-light py-3 w-100 mb-4 px-5 border">
-    <div class="d-flex align-items-center justify-content-between px-5">
+    <div class="d-flex align-items-center justify-content-between px-5 text-black">
       <h2 class="mb-0"><span class="d-none d-md-block">Perguntas Frequentes</span> <span
           class="d-md-none d-block">FAQ</span></h2>
       <select id="faq-select" class="form-select mx-3" onchange="toQuestion()">
@@ -30,7 +30,7 @@
   </div>
   <div class="container">
     <div class="row justify-content-md-center">
-      <div class="col-md-10 d-md-block">
+      <div class="col-md-10 d-md-block text-black">
 
         <h3 id="duracao">Qual é a duração do curso?</h3>
         <p>
