--- a/CodificaAtividade04New/pages/materias.html
+++ b/CodificaAtividade04New/pages/materias.html
@@ -1,10 +1,10 @@
 <section class="materiasSect">
-  <div class="bg-light">
+  <div class="bg-light text-black">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-10 my-3 pt-4">
 
-          <h3 class="textIndent">Introdução ao Python e Configuração do Ambiente</h3>
+          <h3 class="text-center">Introdução ao Python e Configuração do Ambiente</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Familiarizar-se com a linguagem Python e sua filosofia.</li>
@@ -23,7 +23,7 @@
             </li>
           </ul>
 
-          <h3 class="textIndent">Estruturas de Dados e Controle de Fluxo</h3>
+          <h3 class="text-center">Estruturas de Dados e Controle de Fluxo</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Compreender e utilizar as principais estruturas de dados em Python.</li>
@@ -39,7 +39,7 @@
             <li>Condicionais: Estrutura e uso de if, elif e else para tomadas de decisão.</li>
           </ul>
 
-          <h3 class="textIndent">Funções e Módulos</h3>
+          <h3 class="text-center">Funções e Módulos</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Dominar a criação e uso de funções para modularizar e reutilizar código.</li>
@@ -55,7 +55,7 @@
             <li>Criação de Módulos: Como dividir código em diferentes arquivos e organizá-los em pacotes.</li>
           </ul>
 
-          <h3 class="textIndent">Programação Orientada a Objetos</h3>
+          <h3 class="text-center">Programação Orientada a Objetos</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Aprender os conceitos fundamentais da Programação Orientada a Objetos (POO) e aplicá-los em Python.</li>
@@ -71,7 +71,7 @@
             <li>Métodos Especiais: Métodos __init__, __str__, __repr__, operadores sobrecarregados.</li>
           </ul>
 
-          <h3 class="textIndent">Manipulação de Arquivos e Exceções</h3>
+          <h3 class="text-center">Manipulação de Arquivos e Exceções</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Aprender a ler e escrever arquivos de texto e binários.</li>
@@ -86,7 +86,7 @@
               exceções personalizadas.</li>
           </ul>
 
-          <h3 class="textIndent"> Bibliotecas para Análise de Dados</h3>
+          <h3 class="text-center"> Bibliotecas para Análise de Dados</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Utilizar bibliotecas essenciais para a manipulação e análise de dados em Python.</li>
@@ -101,7 +101,7 @@
             </li>
           </ul>
 
-          <h3 class="textIndent">Visualização de Dados</h3>
+          <h3 class="text-center">Visualização de Dados</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Criar visualizações de dados que sejam informativas e esteticamente agradáveis.</li>
@@ -115,7 +115,7 @@
               personalização avançada.</li>
           </ul>
 
-          <h3 class="textIndent">Desenvolvimento Web com Django</h3>
+          <h3 class="text-center">Desenvolvimento Web com Django</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Desenvolver aplicações web completas utilizando o framework Django.</li>
@@ -134,7 +134,7 @@
               permissões.</li>
           </ul>
 
-          <h3 class="textIndent">Introdução a Machine Learning</h3>
+          <h3 class="text-center">Introdução a Machine Learning</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Conhecer os conceitos fundamentais de machine learning.</li>
@@ -149,7 +149,7 @@
             <li>Avaliação de Modelos: Métricas de avaliação, validação cruzada, tuning de hiperparâmetros.</li>
           </ul>
 
-          <h3 class="textIndent">Projeto Final</h3>
+          <h3 class="text-center">Projeto Final</h3>
           <h4>Objetivos:</h4>
           <ul>
             <li>Integrar e aplicar os conhecimentos adquiridos ao longo do curso em um projeto prático e abrangente.
