--- a/CodificaAtividade04New/pages/contato.html
+++ b/CodificaAtividade04New/pages/contato.html
@@ -1,9 +1,9 @@
 <section class="bg-light py-3 py-md-5">
   <div class="container">
     <div class="row justify-content-md-center">
-      <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6 text-black">
         <h2 class="mb-4 display-5 text-center">Contato</h2>
-        <p class="text-secondary mb-5 text-center">As melhores formas de entrar em contato conosco são pelas redes
+        <p class="mb-5 text-center">As melhores formas de entrar em contato conosco são pelas redes
           sociais ou preenchendo o formulário abaixo. Por favor preencha todos os campos requeridos.</p>
       </div>
     </div>
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row justify-content-lg-center">
       <div class="col-12 col-lg-9">
-        <div class="bg-white border rounded shadow-sm overflow-hidden">
+        <div class="bg-white text-black border rounded shadow-sm overflow-hidden">
 
           <form action="#!">
             <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
