--- a/CodificaAtividade04New/pages/info.html
+++ b/CodificaAtividade04New/pages/info.html
@@ -1,5 +1,5 @@
 <section class="informacoesSect">
-  <div class="bg-white">
+  <div class="bg-light text-black">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-10 my-3">
