--- a/CodificaAtividade04New/pages/todo.html
+++ b/CodificaAtividade04New/pages/todo.html
@@ -1,5 +1,5 @@
-<section class="todo bg-light">
-    <div class="container">
+<section class="todo bg-light ">
+    <div class="container text-black">
         <div class="row justify-content-md-center">
             <div class="col-md-10 my-3">
 
@@ -14,4 +14,5 @@
             </div>
         </div>
     </div>
+    
 </section>
