--- a/CodificaAtividade04New/index.html
+++ b/CodificaAtividade04New/index.html
@@ -32,33 +32,33 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand mLogo" href="index.html"><span id="logoP">P</span><span id="logoY">y</span><span
-                        id="logoPath">Path</span></a>
+                        id="logoPath" class="text-black">Path</span></a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" onclick="requestPage('index.html')">Home</a>
+                            <a class="nav-link active text-black" aria-current="page" href="#" onclick="requestPage('index.html')">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="requestPage('./pages/info.html')">Informações</a>
+                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/info.html')">Informações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="requestPage('./pages/materias.html')">Matérias</a>
+                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/materias.html')">Matérias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="requestPage('./pages/faq.html')">FAQ</a>
+                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/faq.html')">FAQ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="requestPage('./pages/contato.html')">Contato</a>
+                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/contato.html')">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="requestPage('./pages/todo.html')">ToDo</a>
+                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/todo.html')">ToDo</a>
                         </li>
-                        <!-- <li class="nav-item">
+                        <li class="nav-item">
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
-                                <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
-                              </div>
-                        </li> -->
+                                <label class="form-check-label" for="darkModeToggle">Dev</label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -66,8 +66,8 @@
     </header>
     <main>
         <section id="content">
-            <section class="quemSomos bg-light text-black">
-                <div class="container">
+            <section class="quemSomos bg-light">
+                <div class="container text-black">
                     <div class="row justify-content-md-center">
                         <div class="col-md-10 my-3">
                             <h2 class="text-center">Quem Somos.</h2>
@@ -87,9 +87,9 @@
             </section>
 
             <section class="pqpython">
-                <div class="container">
+                <div class="container text-white">
                     <div class="row d-flex justify-content-md-center">
-                        <div class="col-md-10 text-white my-3">
+                        <div class="col-md-10 my-3">
                             <h2 class="text-center">Por que estudar Python?</h2>
                             <p class="textIndent textJust">
                                 Python é uma linguagem de programação versátil, fácil de
@@ -106,8 +106,8 @@
                 </div>
             </section>
 
-            <section class="utilizadoCards bg-light text-black">
-                <div class="container">
+            <section class="utilizadoCards bg-light">
+                <div class="container text-black">
                     <div class="row justify-content-md-center ">
                         <div class="col-md-10 mt-3">
                             <h3 class="text-center">No que Python é e pode ser utilizado?</h3>
@@ -251,8 +251,8 @@
                 </div>
             </section>
 
-            <section class="resumoMaterias bg-light text-black">
-                <div class="container">
+            <section class="resumoMaterias bg-light">
+                <div class="container text-black">
                     <div class="row justify-content-md-center">
                         <div class="col-md-8 my-3">
 
@@ -521,23 +521,23 @@
                             <nav>
                                 <div class="nav nav-tabs bg-light " id="nav-tab" role="tablist">
 
-                                    <button class="nav-link m-auto text-black active" id="nav-1-tab"
+                                    <button class="nav-link m-auto text-black active bg-white" id="nav-1-tab"
                                         data-bs-toggle="tab" data-bs-target="#nav-1" type="button" role="tab"
                                         aria-controls="nav-1" aria-selected="true">Aula</button>
 
-                                    <button class="nav-link m-auto text-black" id="nav-2-tab" data-bs-toggle="tab"
+                                    <button class="nav-link m-auto text-black bg-white" id="nav-2-tab" data-bs-toggle="tab"
                                         data-bs-target="#nav-2" type="button" role="tab" aria-controls="nav-2"
                                         aria-selected="false">Material</button>
 
-                                    <button class="nav-link m-auto text-black" id="nav-3-tab" data-bs-toggle="tab"
+                                    <button class="nav-link m-auto text-black bg-white" id="nav-3-tab" data-bs-toggle="tab"
                                         data-bs-target="#nav-3" type="button" role="tab" aria-controls="nav-3"
                                         aria-selected="false">Exercícios</button>
 
-                                    <button class="nav-link m-auto text-black" id="nav-4-tab" data-bs-toggle="tab"
+                                    <button class="nav-link m-auto text-black bg-white" id="nav-4-tab" data-bs-toggle="tab"
                                         data-bs-target="#nav-4" type="button" role="tab" aria-controls="nav-4"
                                         aria-selected="false">Fórum</button>
 
-                                    <button class="nav-link m-auto text-black" id="nav-5-tab" data-bs-toggle="tab"
+                                    <button class="nav-link m-auto text-black bg-white" id="nav-5-tab" data-bs-toggle="tab"
                                         data-bs-target="#nav-5" type="button" role="tab" aria-controls="nav-5"
                                         aria-selected="false">Suporte</button>
 
