--- a/CodificaAtividade04New/index.html
+++ b/CodificaAtividade04New/index.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="./assets/css/index.css">
 
     <link rel="stylesheet" href="./assets/css/faq.css">
-    <link rel="stylesheet" href="./assets/css/crud.css">
+    <link rel="stylesheet" href="./assets/css/mode.css">
 </head>
 
 <body>
     <button onclick="toTop()" id="btnToTop">
         <img src="./assets/icons/backtotop.jpg" id="toTopImg" />
     </button>
-    <header>
-        <nav class="navbar fixed-top navbar-expand-lg bg-white border shadow-sm navegacao">
+    <header id="header">
+        <nav class="navbar fixed-top navbar-expand-lg bg-white  shadow-sm navegacao">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
@@ -50,15 +50,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-black" href="#" onclick="requestPage('./pages/contato.html')">Contato</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-black" href="#" onclick="requestPage('./pages/todo.html')">ToDo</a>
-                        </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()">
-                                <label class="form-check-label" for="darkModeToggle">Dev</label>
+                                <label class="form-check-label" for="darkModeToggle">Dark</label>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -618,7 +615,7 @@
             </section>
         </section>
     </main>
-    <footer class="position-absolute w-100 bg-white border shadow-sm">
+    <footer id="footer" class="shadow-sm bg-white position-absolute w-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="d-sm-flex d-lg-block justify-content-center col-md-12 col-lg-2 ">
@@ -646,6 +643,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -659,7 +657,7 @@
     <script src="./assets/js/faq.js"></script>
     <script src="./assets/js/requisicoes.js"></script>
     
-    <script src="./assets/js/dev.js"></script>
+    <script src="./assets/js/dMode.js"></script>
 </body>
 
 </html>
